--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,7 @@ website:
       - href: index.qmd
         text: Home
       - sudancrisis.qmd
+        text: Sudan Crisis
       - about.qmd
 
 format:
