--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
     right:
       - href: index.qmd
         text: Home
-      - sudancrisis.qmd
+      - href: sudancrisis.qmd
         text: Sudan Crisis
       - about.qmd
 
